# opentoonz

./: appveyor.yml
.github/workflows/: check_code.yml  code_analise_windows.yml  static-analysis  static-analysis.yml  workflow_linux.yml  workflow_macos.yml  workflow_windows.yml
ci-scripts/: qt.iwyu.imp
ci-scripts/linux/: ot-buildlibmypaint.sh  test_files.txt  travis-build.sh  travis-install.sh
plugins/geom/: CMakeLists.txt
plugins/multiplugin/: CMakeLists.txt
toonz/sources/: .clang-format  CMakeLists.txt
toonz/sources/colorfx/: CMakeLists.txt  flowlinestrokestyle.cpp
toonz/sources/common/: tvariant.cpp
toonz/sources/common/expressions/: tgrammar.cpp
toonz/sources/common/tcache/: timagecache.cpp
toonz/sources/common/tfx/: tmacrofx.cpp
toonz/sources/common/tgl/: tgldisplaylistsmanager.cpp
toonz/sources/common/tiio/: movsettings.cpp
toonz/sources/common/timage/: tlevel.cpp
toonz/sources/common/tipc/: tipc.cpp
toonz/sources/common/tmeshimage/: tmeshimage.cpp
toonz/sources/common/tparam/: tparamcontainer.cpp
toonz/sources/common/trasterimage/: tcodec.cpp
toonz/sources/common/trop/: tconvolve.cpp
toonz/sources/common/tstream/: tstream.cpp
toonz/sources/common/tsystem/: tsystempd.cpp
toonz/sources/common/tvrender/: tpalette.cpp
toonz/sources/image/: CMakeLists.txt
toonz/sources/image/exr/: tiio_exr.cpp
toonz/sources/image/pli/: pli_io.cpp  pli_io.h  tags.cpp  tiio_pli.cpp  tiio_pli.h
toonz/sources/image/png/: tiio_png.cpp
toonz/sources/image/quantel/: filequantel.c  filequantel.h  filequantelP.h
toonz/sources/image/tif/: tiio_tif.cpp
toonz/sources/image/tzl/: tiio_tzl.cpp
toonz/sources/image/tzp/: avl.c  avl.h
toonz/sources/include/: orientation.h  texport_config.h  tfx.h  tfxparam.h  tgldisplaylistsmanager.h  tgrammar.h  tlevel.h  tmachine.h  tmeshimage.h  tparamcontainer.h  tsmartpointer.h  tstream.h  tvariant.h
toonz/sources/include/stdfx/: shadingcontext.h
toonz/sources/include/tcg/: list.h  mesh_bgl.h
toonz/sources/include/tools/: rasterselection.h
toonz/sources/include/toonz/: txshsoundcolumn.h
toonz/sources/include/toonzqt/: fxschematicscene.h  studiopaletteviewer.h  styleeditor.h
toonz/sources/mousedragfilter/: CMakeLists.txt
toonz/sources/sound/: CMakeLists.txt
toonz/sources/stdfx/: CMakeLists.txt  cornerpinfx.cpp  igs_ifx_common.h  igs_line_blur.cpp  pins.cpp  shaderfx.cpp  shadingcontext.cpp
toonz/sources/stopmotion/: jpgconverter.cpp
toonz/sources/tnzbase/: CMakeLists.txt
toonz/sources/tnzcore/: CMakeLists.txt
toonz/sources/tnzext/: CMakeLists.txt
toonz/sources/tnztools/: CMakeLists.txt  geometrictool.cpp  rasterselection.cpp  rasterselectiontool.cpp  rastertapetool.cpp  tooloptionscontrols.cpp
toonz/sources/toonz/: CMakeLists.txt  autolipsyncpopup.cpp  autolipsyncpopup.h  dvwidgets.cpp  histogrampopup.cpp  levelcreatepopup.cpp  lipsyncpopup.cpp  lipsyncpopup.h  locatorpopup.cpp  locatorpopup.h  main.cpp  mainwindow.cpp  mergecmapped.cpp  mergecolumns.cpp  previewer.cpp  reframepopup.cpp  reframepopup.h  ruler.cpp  ruler.h  sceneviewercontextmenu.h  toolbar.cpp  tpanels.cpp  xshcellviewer.cpp
toonz/sources/toonzfarm/tfarm/: CMakeLists.txt  ttcpipclient.cpp  ttcpipserver.cpp
toonz/sources/toonzlib/: CMakeLists.txt  Naa2TlvConverter.cpp  autoclose.cpp  palettecontroller.cpp  plasticdeformerfx.cpp  stagevisitor.cpp  tscenehandle.cpp  txsheet.cpp  txshsimplelevel.cpp  txshsoundtextcolumn.cpp
toonz/sources/toonzqt/: CMakeLists.txt  doublefield.cpp  doublepairfield.cpp  dvdialog.cpp  dvtextedit.cpp  filefield.cpp  fxschematicnode.cpp  histogram.cpp  icongenerator.cpp  intfield.cpp  plugin_param_traits.h  studiopaletteviewer.cpp  styleeditor.cpp  styleselection.cpp  treemodel.cpp
